...
        app:layout_constraintVertical_bias="0.133"
        android:background="@drawable/ic_mainmenuhouse"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/living_room"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2"
        android:text="MAIN MENU"
        android:textSize="30dp"
        android:textColor="@android:color/white"
...
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@drawable/state_menu"
        android:id="@+id/living_room"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Livingroom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2"
        app:layout_constraintVertical_bias="0.152" />
...
